--- a/dis-algorithm/pom.xml
+++ b/dis-algorithm/pom.xml
@@ -1,11 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>com.alibaba.datax</groupId>
-        <artifactId>datax-all</artifactId>
-        <version>1.0.0.0</version>
-    </parent>
+    <groupId>com.alibaba.datax</groupId>
     <artifactId>dis-algorithm</artifactId>
     <packaging>jar</packaging>
     <name>dis-algorithm</name>
@@ -13,12 +9,15 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>9</maven.compiler.source>
+        <maven.compiler.target>9</maven.compiler.target>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
+            <version>3.12.0</version>
         </dependency>
         <dependency>
             <groupId>org.bouncycastle</groupId>
